fix: moved everything to be centered, added -mt-10 inside snapscroll and overflow-hidden to contentcomponent

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 }
 
 p {
-  font-size: 1.3em;
+  font-size: 0.9em;
   font-weight: 400;
   line-height: 1.4em;
   font-family:  'adobe-garamond-pro', Garamond, 'Baskerville', 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', Times, sans-serif;
